k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-test
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: devsecops-test
  sessionAffinity: None
  type: ClusterIP
