k8s/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-test
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsecops-test
            port:
              number: 80
